--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TOTAL_CODE_TIME: "true"
           SHOW_COMMIT: "true"
@@ -21,3 +22,4 @@ jobs:
           SHOW_PROJECTS: "true"
           SHOW_EDITORS: "true"
           SHOW_TIMEZONE: "true"
+
