--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -2,18 +2,19 @@ name: WakaTime Readme Stats
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs daily at midnight UTC
+    - cron: "0 0 * * *"  # Every day at midnight UTC
   workflow_dispatch:
 
 jobs:
   update-readme:
-    name: Update WakaTime stats in README
     runs-on: ubuntu-latest
+
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - name: Update WakaTime stats
+        uses: anmol098/waka-readme-stats@master
         with:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_TOTAL_CODE_TIME: "true"
           SHOW_COMMIT: "true"
           SHOW_DAYS_OF_WEEK: "true"
@@ -22,4 +23,5 @@ jobs:
           SHOW_PROJECTS: "true"
           SHOW_EDITORS: "true"
           SHOW_TIMEZONE: "true"
+
 
