--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -2,7 +2,7 @@ name: WakaTime Readme Stats
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Every day at midnight UTC
+    - cron: "0 0 * * *"  # Daily at midnight UTC
   workflow_dispatch:
 
 jobs:
@@ -13,8 +13,8 @@ jobs:
       - name: Update WakaTime stats
         uses: anmol098/waka-readme-stats@master
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TOTAL_CODE_TIME: "true"
           SHOW_COMMIT: "true"
           SHOW_DAYS_OF_WEEK: "true"
@@ -23,5 +23,8 @@ jobs:
           SHOW_PROJECTS: "true"
           SHOW_EDITORS: "true"
           SHOW_TIMEZONE: "true"
+          # ❌ Remove this to prevent crash
+          # SHOW_PROFILE_VIEWS: "true"
+
 
 
