--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -23,8 +23,14 @@ jobs:
           SHOW_PROJECTS: "true"
           SHOW_EDITORS: "true"
           SHOW_TIMEZONE: "true"
-          # ❌ Remove this to prevent crash
-          # SHOW_PROFILE_VIEWS: "true"
+          SHOW_LINES_OF_CODE: "true"
+          SHOW_LANGUAGE_PER_REPO: "true"
+          SHOW_LOC_CHART: "true"
+          SHOW_SHORT_INFO: "true"
+          SHOW_UPDATED_DATE: "true"
+          # ❌ Explicitly disable the profile views to prevent crash
+          SHOW_PROFILE_VIEWS: "false"
+
 
 
 
