--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -2,7 +2,7 @@ name: WakaTime Readme Stats
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *"   # every day at midnight UTC
   workflow_dispatch:
 
 jobs:
@@ -10,30 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Update WakaTime stats
-        uses: anmol098/waka-readme-stats@master
+        uses: wakatime/waka-readme-stats@v1.1.1
         with:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_TOTAL_CODE_TIME: "true"
-          SHOW_COMMIT: "true"
-          SHOW_DAYS_OF_WEEK: "true"
-          SHOW_LANGUAGE: "true"
-          SHOW_OS: "true"
-          SHOW_PROJECTS: "true"
-          SHOW_EDITORS: "true"
-          SHOW_TIMEZONE: "true"
-          SHOW_LINES_OF_CODE: "true"
-          SHOW_LANGUAGE_PER_REPO: "true"
-          SHOW_LOC_CHART: "true"
-          SHOW_SHORT_INFO: "true"
-          SHOW_UPDATED_DATE: "true"
-          COMMIT_BY_ME: "true"
-          COMMIT_MESSAGE: "Updated with Dev Metrics"
-          COMMIT_SINGLE: "false"
-          LOCALE: "en"
-          UPDATED_DATE_FORMAT: "%d/%m/%Y %H:%M:%S"
-          SYMBOL_VERSION: "1"
-          DEBUG_LOGGING: "1"
+          # your secrets:
+          wkt_api_key: ${{ secrets.WAKATIME_API_KEY }}
+          # metrics you want to show:
+          show_total: true
+          show_languages: true
+          show_editors: true
+          show_projects: true
+          show_os: true
+          show_timezones: true
+          show_commits: true
+          show_days_of_week: true
+          show_language_percentages: true
+          show_locations: true
+
 
 
 
