--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -3,40 +3,48 @@ name: WakaTime Readme Stats
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # daily at midnight UTC
+    - cron: "0 0 * * *"   # every day at midnight UTC
   workflow_dispatch:
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
-
     steps:
+      # 1. Make sure your README is checked out
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # 2. Run the official WakaTime Readme Stats action (v5)
       - name: Update WakaTime stats
-        uses: wakatime/waka-readme-stats@v1.1.1
+        uses: miermontoto/waka-readme-stats@v5
         with:
-          # your secrets:
-          wkt_api_key: ${{ secrets.WAKATIME_API_KEY }}
-          gh_token:       ${{ secrets.GH_TOKEN }}
+          # required secrets
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN:         ${{ secrets.GH_TOKEN }}
 
-          # pick the metrics you want:
-          show_total:            true
-          show_languages:        true
-          show_editors:          true
-          show_projects:         true
-          show_os:               true
-          show_timezones:        true
-          show_commits:          true
-          show_days_of_week:     true
-          show_language_percent: true
-          show_loc_chart:        true
-          show_short:            true
-          show_updated_at:       true
+          # optional: customise the section name in your README (default: waka)
+          SECTION_NAME:     waka
 
-          # commit options:
-          commit_message:        "chore: update waka stats"
-          commit_name:           "github-actions[bot]"
-          commit_email:          "41898282+github-actions[bot]@users.noreply.github.com"
-          commit_single:         true
+          # optional feature flags (all default to true—you can omit any you don't want)
+          SHOW_TOTAL_CODE_TIME:    true
+          SHOW_DAYS_OF_WEEK:       true
+          SHOW_LANGUAGE:           true
+          SHOW_EDITORS:            true
+          SHOW_PROJECTS:           true
+          SHOW_OS:                 true
+          SHOW_TIMEZONE:           true
+          SHOW_COMMIT:             true
+          SHOW_LINES_OF_CODE:      true
+          SHOW_LANGUAGE_PER_REPO:  true
+          SHOW_LOC_CHART:          true
+          SHOW_SHORT_INFO:         true
+          SHOW_UPDATED_DATE:       true
+
+          # optional commit settings
+          COMMIT_MESSAGE:   "chore: update WakaTime stats"
+          COMMIT_USERNAME:  "github-actions[bot]"
+          COMMIT_EMAIL:     "41898282+github-actions[bot]@users.noreply.github.com"
+          COMMIT_SINGLE:    true
 
 
 
